--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.1.3",
     "normalize.css": "^8.0.0",
     "rxjs": "^6.0.0",
+    "stripe": "^6.8.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
