--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "typeRoots": [ "node_modules/@types", "../src/typings.d.ts" ],
     "lib": [
       "es2017",
       "dom"
