--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.0.9",
     "@angular/cdk": "^6.3.3",
     "@angular/common": "^6.0.3",
@@ -23,12 +24,14 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/googlemaps": "^3.30.12",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "mongoose": "^5.1.3",
     "normalize.css": "^8.0.0",
     "rxjs": "^6.0.0",
+    "save": "^2.3.2",
     "stripe": "^6.8.0",
     "zone.js": "^0.8.26"
   },
